--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TDesign Vue Next Starter</title>
+    <title>TNT Admin</title>
   </head>
   <body>
     <div id="app"></div>
@@ -14,12 +14,12 @@
         const aegis = new Aegis({
           id: 'rDISNMyXgqWDFPyHMB', // 项目ID，即上报key
           reportAssetSpeed: true, // 静态资源测速
-        });
+        })
       }
     </script>
   </body>
-  
+
   <script>
-    window.global = window;
+    window.global = window
   </script>
 </html>
