--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
+    <link rel="apple-touch-icon" href="/pwa-192x192.png" />
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- <meta name="theme-color" content="#60a5fa" /> -->
+    <!-- <script src="/master/sw.js"></script> -->
     <title>TNT Admin</title>
   </head>
   <body>
